[gd_scene load_steps=6 format=2]

[ext_resource path="res://Modules/INTBackground/ParticalMatrixManager.gd" type="Script" id=1]
[ext_resource path="res://Modules/INTBackground/Prefab/Matrix1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Modules/INTBackground/Prefab/Matrix3.tscn" type="PackedScene" id=3]
[ext_resource path="res://Modules/INTBackground/Prefab/Matrix2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Modules/INTBackground/Prefab/Matrix4.tscn" type="PackedScene" id=5]

[node name="MatrixManager" type="Node"]
script = ExtResource( 1 )

[node name="Matrix1" parent="." instance=ExtResource( 2 )]

[node name="Matrix2" parent="." instance=ExtResource( 4 )]

[node name="Matrix3" parent="." instance=ExtResource( 3 )]

[node name="Matrix4" parent="." instance=ExtResource( 5 )]
